<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project5_pkg</name>
  <version>0.0.0</version>
  <description>Project 5 package. This package sets the intial pose of the robot</description>
  <maintainer email="kiranajith97@gmail.com">kiran</maintainer>
  <maintainer email="weisu77@umd.edu">wei-li</maintainer>
  <license>TODO: License declaration</license>


  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
